[gd_scene load_steps=2 format=3 uid="uid://y7jjb0foogc5"]

[ext_resource type="Script" path="res://control.gd" id="1_6q33w"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -3.0
offset_right = -1160.0
offset_bottom = -651.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6q33w")

[node name="Set Software Format" type="Button" parent="."]
layout_mode = 0
offset_left = 95.0
offset_top = 253.0
offset_right = 261.0
offset_bottom = 284.0
text = "Set Software Format"

[node name="Start Fmod" type="Button" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = 306.0
offset_right = 221.0
offset_bottom = 337.0
text = "Start Fmod"

[node name="Test Fmod" type="Button" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 372.0
offset_right = 293.0
offset_bottom = 426.0
text = "Test
returns true if Fmod initialized"

[node name="Load Master Bank" type="Button" parent="."]
layout_mode = 0
offset_left = 522.0
offset_top = 103.0
offset_right = 670.0
offset_bottom = 134.0
text = "Load Master Bank"

[node name="Load TestEvents Bank" type="Button" parent="."]
layout_mode = 0
offset_left = 509.0
offset_top = 165.0
offset_right = 686.0
offset_bottom = 196.0
text = "Load TestEvents Bank
"

[node name="Load Strings Bank" type="Button" parent="."]
layout_mode = 0
offset_left = 522.0
offset_top = 225.0
offset_right = 669.0
offset_bottom = 256.0
text = "Load Strings Bank"

[node name="Get Event Description" type="Button" parent="."]
layout_mode = 0
offset_left = 509.0
offset_top = 459.0
offset_right = 685.0
offset_bottom = 490.0
text = "Get Event Description"

[node name="Create Event Instance" type="Button" parent="."]
layout_mode = 0
offset_left = 509.0
offset_top = 510.0
offset_right = 686.0
offset_bottom = 541.0
text = "Create Event Instance"

[node name="Play Event" type="Button" parent="."]
layout_mode = 0
offset_left = 906.0
offset_top = 113.0
offset_right = 1002.0
offset_bottom = 144.0
text = "Play Event"

[node name="Stop Event" type="Button" parent="."]
layout_mode = 0
offset_left = 906.0
offset_top = 169.0
offset_right = 997.0
offset_bottom = 200.0
text = "Stop Event"

[node name="Release Event" type="Button" parent="."]
layout_mode = 0
offset_left = 921.0
offset_top = 406.0
offset_right = 1036.0
offset_bottom = 437.0
text = "Release Event"

[node name="Unload Banks" type="Button" parent="."]
layout_mode = 0
offset_left = 921.0
offset_top = 459.0
offset_right = 1036.0
offset_bottom = 490.0
text = "Unload Banks"

[node name="Release Fmod" type="Button" parent="."]
layout_mode = 0
offset_left = 921.0
offset_top = 515.0
offset_right = 1037.0
offset_bottom = 546.0
text = "Release Fmod"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 256.0
offset_right = 90.0
offset_bottom = 279.0
text = "1. "

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = 306.0
offset_right = 119.0
offset_bottom = 329.0
text = "2."

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 384.0
offset_right = 42.0
offset_bottom = 407.0
text = "3."

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 493.0
offset_top = 113.0
offset_right = 507.0
offset_bottom = 136.0
text = "4."

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 482.0
offset_top = 169.0
offset_right = 496.0
offset_bottom = 192.0
text = "5."

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 493.0
offset_top = 225.0
offset_right = 507.0
offset_bottom = 248.0
text = "6."

[node name="Label7" type="Label" parent="."]
layout_mode = 0
offset_left = 482.0
offset_top = 459.0
offset_right = 496.0
offset_bottom = 482.0
text = "7."

[node name="Label8" type="Label" parent="."]
layout_mode = 0
offset_left = 482.0
offset_top = 510.0
offset_right = 496.0
offset_bottom = 533.0
text = "8."

[node name="Label9" type="Label" parent="."]
layout_mode = 0
offset_left = 881.0
offset_top = 113.0
offset_right = 895.0
offset_bottom = 136.0
text = "9."

[node name="Label10" type="Label" parent="."]
layout_mode = 0
offset_left = 870.0
offset_top = 169.0
offset_right = 893.0
offset_bottom = 192.0
text = "10."

[node name="Label11" type="Label" parent="."]
layout_mode = 0
offset_left = 881.0
offset_top = 407.0
offset_right = 904.0
offset_bottom = 430.0
text = "11.
"

[node name="Label12" type="Label" parent="."]
layout_mode = 0
offset_left = 881.0
offset_top = 459.0
offset_right = 904.0
offset_bottom = 482.0
text = "12."

[node name="Label13" type="Label" parent="."]
layout_mode = 0
offset_left = 881.0
offset_top = 515.0
offset_right = 904.0
offset_bottom = 538.0
text = "13."

[connection signal="pressed" from="Set Software Format" to="." method="_on_set_software_format_pressed"]
[connection signal="pressed" from="Start Fmod" to="." method="_on_start_fmod_pressed"]
[connection signal="pressed" from="Test Fmod" to="." method="_on_test_fmod_pressed"]
[connection signal="pressed" from="Load Master Bank" to="." method="_on_load_master_bank_pressed"]
[connection signal="pressed" from="Load TestEvents Bank" to="." method="_on_load_test_events_bank_pressed"]
[connection signal="pressed" from="Load Strings Bank" to="." method="_on_load_strings_bank_pressed"]
[connection signal="pressed" from="Get Event Description" to="." method="_on_get_event_description_pressed"]
[connection signal="pressed" from="Create Event Instance" to="." method="_on_create_event_instance_pressed"]
[connection signal="pressed" from="Play Event" to="." method="_on_play_event_pressed"]
[connection signal="pressed" from="Stop Event" to="." method="_on_stop_event_pressed"]
[connection signal="pressed" from="Release Event" to="." method="_on_release_event_pressed"]
[connection signal="pressed" from="Unload Banks" to="." method="_on_unload_banks_pressed"]
[connection signal="pressed" from="Release Fmod" to="." method="_on_release_fmod_pressed"]
